welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:5: error: type mismatch;
 found   : Unit
 required: Int
  while (c % 10 > 10 || d % 10 > 10)
  ^